Clickable menu. Search view added.

--- a/cabinet_list.html
+++ b/cabinet_list.html
@@ -34,14 +34,15 @@
 		</div>
 		<nav>
 			<ul>
-				<li class="active"><a href="#"><i class="fa fa-area-chart"></i>Pulpit</a></li>
-				<li><a href="#"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
+				<li class="active"><a href="search.html"><i class="fa fa-search"></i> Szukaj</a></li>
+				<li><a href="#"><i class="fa fa-area-chart"></i>Pulpit</a></li>
+				<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
 				<li><a href="#"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
-				<li><a href="#"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
-				<li><a href="#"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
+				<li><a href="visit.html"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
+				<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
 				<li><a href="#"><i class="fa fa-inbox"></i>Wiadomości</a></li>
 				<li><a href="#"><i class="fa fa-cogs"></i>Moje konto</a></li>
-				<li><a href="#"></a></li>
+				<li><a href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
 			</ul>
 		</nav>
 		<div class="footer">
@@ -84,7 +85,7 @@
 							</li>
 							<li>
 								<div class="info">									
-									<a href="#">Niepubliczny Zakład Medycyny Stosowanej</a>
+									<a href="cabinet_info.html">Niepubliczny Zakład Medycyny Stosowanej</a>
 								</div>
 								<div class="action">
 									<a href="#"><i class="fa fa-eye-slash"></i></a>
