--- a/calendar_1day.html
+++ b/calendar_1day.html
@@ -37,14 +37,15 @@
 			</div>
 			<nav>
 				<ul>
-					<li class="active"><a href="#"><i class="fa fa-area-chart"></i>Pulpit</a></li>
-					<li><a href="#"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
+					<li class="active"><a href="search.html"><i class="fa fa-search"></i> Szukaj</a></li>
+					<li><a href="#"><i class="fa fa-area-chart"></i>Pulpit</a></li>
+					<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
 					<li><a href="#"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
-					<li><a href="#"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
-					<li><a href="#"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
+					<li><a href="visit.html"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
+					<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
 					<li><a href="#"><i class="fa fa-inbox"></i>Wiadomości</a></li>
 					<li><a href="#"><i class="fa fa-cogs"></i>Moje konto</a></li>
-					<li><a href="#"></a></li>
+					<li><a href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
 				</ul>
 			</nav>			
 		</div>		
@@ -59,9 +60,9 @@
 				<h2><i class="fa fa-calendar"></i> Kalendarz</h2>
 				<nav>
 					<ul>
-						<li class="active"><a href="#"><i class="fa fa-calendar"></i>Dzienny</a></li>
-						<li><a href="#"><i class="fa fa-calendar"></i>Tygodnowy</a></li>
-						<li><a href="#"><i class="fa fa-calendar"></i>Miesięczny</a></li>
+						<li class="active"><a href="calendar_1day.html"><i class="fa fa-calendar"></i>Dzienny</a></li>
+						<li><a href="calendar_7days.html"><i class="fa fa-calendar"></i>Tygodnowy</a></li>
+						<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Miesięczny</a></li>
 						<li><a href="#"><i class="fa fa-file-o"></i>Notatki</a></li>
 					</ul>
 				</nav>	
@@ -202,8 +203,7 @@
 											Następny pacjent <i class="fa fa-angle-right"></i>
 										</a>
 									</div>
-								</div>
-								
+								</div>								
 							</div>												
 						</div>
 					</div>
