--- a/window_delete_visit.html
+++ b/window_delete_visit.html
@@ -21,7 +21,7 @@
 		<div class="content">
 			<div class="row">
 				<div class="col">
-					<div class="window">
+					<div id="form" class="window">
 						<a href="#" id="cw" class="close">
 							<i class="fa fa-times-circle-o"></i>
 						</a>
@@ -64,7 +64,7 @@
 								lub
 							</li>
 							<li>	
-								<button type="submit" id="cw" class="btn cw md">
+								<button type="submit" class="btn cw md">
 									<i class="fa fa-times-circle-o"></i> Zamknij okno
 								</button>
 							</li>
