--- a/calendar_30days.html
+++ b/calendar_30days.html
@@ -37,17 +37,17 @@
 			</div>
 			<nav>
 				<ul>
-					<li class="active"><a href="#"><i class="fa fa-area-chart"></i>Pulpit</a></li>
-					<li><a href="#"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
+					<li class="active"><a href="search.html"><i class="fa fa-search"></i> Szukaj</a></li>
+					<li><a href="#"><i class="fa fa-area-chart"></i>Pulpit</a></li>
+					<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
 					<li><a href="#"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
-					<li><a href="#"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
-					<li><a href="#"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
+					<li><a href="visit.html"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
+					<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
 					<li><a href="#"><i class="fa fa-inbox"></i>Wiadomości</a></li>
 					<li><a href="#"><i class="fa fa-cogs"></i>Moje konto</a></li>
-					<li><a href="#"></a></li>
+					<li><a href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
 				</ul>
-			</nav>
-			
+			</nav>			
 		</div>
 		<div class="footer">
 			Power by <a href="http://www.herolynx.com" target="_blank">HeroLynx.com</a>
@@ -60,9 +60,9 @@
 				<h2><i class="fa fa-calendar"></i> Kalendarz</h2>
 				<nav>
 					<ul>
-						<li class="active"><a href="#"><i class="fa fa-calendar"></i>Dzienny</a></li>
-						<li><a href="#"><i class="fa fa-calendar"></i>Tygodnowy</a></li>
-						<li><a href="#"><i class="fa fa-calendar"></i>Miesięczny</a></li>
+						<li class="active"><a href="calendar_1day.html"><i class="fa fa-calendar"></i>Dzienny</a></li>
+						<li><a href="calendar_7days.html"><i class="fa fa-calendar"></i>Tygodnowy</a></li>
+						<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Miesięczny</a></li>
 						<li><a href="#"><i class="fa fa-file-o"></i>Notatki</a></li>
 					</ul>
 				</nav>	
