--- a/window_login.html
+++ b/window_login.html
@@ -21,7 +21,7 @@
 		<div class="content">
 			<div class="row">
 				<div class="col">
-					<div class="window">
+					<div id="form" class="window">
 						<a href="#" id="cw" class="close">
 							<i class="fa fa-times-circle-o"></i>
 						</a>
