UX of calendar and patient visits improved.

--- a/cabinet_inter.html
+++ b/cabinet_inter.html
@@ -42,7 +42,7 @@
 				<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
 				<li><a href="#"><i class="fa fa-inbox"></i>Wiadomości</a></li>
 				<li><a href="#"><i class="fa fa-cogs"></i>Moje konto</a></li>
-				<li><a href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
+				<li><a href="#"><i class="fa fa-power-off"></i>Wyloguj</a></li>
 			</ul>
 		</nav>
 		<div class="footer">
@@ -102,9 +102,9 @@
 </div>
 
 
-
-
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/jquery.nice-select.min.js"></script>
+<script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
