--- a/calendar_30days.html
+++ b/calendar_30days.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="elements.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="css/jquery.bxslider.css" type="text/css" media="screen" />	
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="css/jguery.Select.css" type="text/css" media="screen" />
 	
 </head>
 <body>
@@ -45,7 +47,7 @@
 					<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
 					<li><a href="#"><i class="fa fa-inbox"></i>Wiadomości</a></li>
 					<li><a href="#"><i class="fa fa-cogs"></i>Moje konto</a></li>
-					<li><a href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
+					<li><a href="#"><i class="fa fa-power-off"></i>Wyloguj</a></li>
 				</ul>
 			</nav>			
 		</div>
@@ -57,16 +59,20 @@
 	<section id="main-content">		
 		<div id="title">
 			<div class="content">
-				<h2><i class="fa fa-calendar"></i> Kalendarz</h2>
+				<h2>Kalendarz</h2>
 				<nav>
 					<ul>
-						<li class="active"><a href="calendar_1day.html"><i class="fa fa-calendar"></i>Dzienny</a></li>
-						<li><a href="calendar_7days.html"><i class="fa fa-calendar"></i>Tygodnowy</a></li>
-						<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Miesięczny</a></li>
-						<li><a href="#"><i class="fa fa-file-o"></i>Notatki</a></li>
+						<li class="active"><a href="calendar_1day.html"><i class="fa fa-calendar"></i><span>Dzienny</span></a></li>
+						<li><a href="calendar_7days.html"><i class="fa fa-calendar"></i><span>Tygodnowy</span></a></li>
+						<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i><span>Miesięczny</span></a></li>
+						<li><a href="#"><i class="fa fa-file-o"></i><span>Notatki</span></a></li>
 					</ul>
 				</nav>	
 			</div>
+			<div class="action">
+				<a href="#"><i class="fa fa-bell-o"></i><span>20</span></a>
+				<a href="#"><i class="fa fa-power-off"></i></a>
+			</div>				
 		</div>		
 		
 		<section id="calendar">			
@@ -74,238 +80,424 @@
 				<div class="month">
 					<div class="col col-7">						
 						<div class="window">						
-							<div class="wrapper">
-								<div class="date">
-									<a href="#"><i class="fa fa-angle-left"></i></a>
+							<div class="title-window">
+								<div class="choose">
+									<fieldset>
+										<select>
+											<option value="1">Wybierz gabinet</option>
+											<option value="2">NFZ Róża</option>
+											<option value="3">Remedis</option>
+										</select>
+									</fieldset>
+								</div>
+								<div class="box">
+									<a href="#" class="left"><i class="fa fa-angle-left"></i></a>
 									<span>
 										5 maja 2015
 									</span>
-									<a href="#"><i class="fa fa-angle-right"></i></a>
+									<a href="#" class="right"><i class="fa fa-angle-right"></i></a>
 									<a href="#" class="calendar"><i class="fa fa-calendar"></i></a>
 								</div>
 								<div class="visit">
-									Zaplanowane wizyty na dziś
+									Zaplanowane wizyty na dziś <span>39</span>
+								</div>
+								<div class="legend">
+									<a href="#"><i class="fa fa-list-ul"></i> Legenda</a>									
+									<ul class="position">
+										<li><span style="background:green"></span>Badanie kontrolne (10 min)</li>
+										<li><span style="background:red"></span>Ekstrakcja zęba (20 min)</li>
+										<li><span style="background:orange"></span>Wybielanie zębów (10 min)</li>
+									</ul>									
 								</div>
 							</div>
 									
-							<div class="days">
-								<div class="box">PN</div>
-								<div class="box">WT</div>
-								<div class="box">ŚR</div>
-								<div class="box">CZW</div>
-								<div class="box">PT</div>
-								<div class="box">SOB</div>
-								<div class="box">ND</div>
-							</div>							
+							<ul class="days">
+								<li>PN</li>
+								<li>WT</li>
+								<li>ŚR</li>
+								<li>CZW</li>
+								<li>PT</li>
+								<li>SOB</li>
+								<li>ND</li>
+							</ul>							
 							<ul class="table">
 								<li>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="mark"></div>
-											<div class="content">										
+											<a href="#" class="add"></a>	
+											<div class="content">
 												<div class="number">
 													1
-												</div>
-												<div class="info">													
-													<div class="count">													
-														<i class="fa fa-list"></i>
-														<span>6 wizyt</span>
+												</div>	
+												<div class="events">
+													<div class="event" style="background:green;">
+														<a href="#"></a>
+														<span>K. Kowalski</span>								
 													</div>
-													<ul>
-														<li>
-															<span>
-																<i class="fa fa-clock-o"></i> 13:30
-															</span>
-															<span class="name">P.</span>
-															<span class="lastname">Kowalski</span>
-														</li>
-														<li>
-															<span>
-																<i class="fa fa-clock-o"></i> 13:30
-															</span>
-															<span class="name">P.</span>
-															<span class="lastname">Kowalski</span>
-														</li>
-														<li>
-															<span>
-																<i class="fa fa-clock-o"></i> 13:30
-															</span>
-															<span class="name">P.</span>
-															<span class="lastname">Kowalski</span>
-														</li>
-														<li>
-															<span>
-																<i class="fa fa-clock-o"></i> 13:30
-															</span>
-															<span class="name">P.</span>
-															<span class="lastname">Kowalski</span>
-														</li>
-													</ul>													
-													<i class="fa fa-ellipsis-h more"></i>
+													<div class="event" style="background:red;">
+														<a href="#"></a>
+														<span>M. Kowalczyk</span>								
+													</div>
 												</div>
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">2</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													2
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">3</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													3
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">4</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													4
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">5</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													5
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">6</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													6
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">7</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													7
+												</div>	
 											</div>
 										</div>
 									</div>
 								</li>
-								<li>									
+								<li>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">8</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													8
+												</div>													
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">9</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													9
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">10</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													10
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">11</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													11
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">12</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													12
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">13</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													13
+												</div>	
 											</div>
 										</div>
 									</div>
 									<div class="day">
 										<div class="box">
-											<a href="#" class="add"></a>
-											<div class="content">										
-												<div class="number">14</div>
-												<div class="add-box">
-													<i class="fa fa-plus-circle"></i>
-													<span>Dodaj wizytę</span>
-												</div>
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													14
+												</div>	
 											</div>
 										</div>
-									</div>									
+									</div>
 								</li>
+								<li>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													16
+												</div>											
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													16
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													17
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													18
+												</div>	
+												<div class="events">
+													<div class="event" style="background:orange;">
+														<a href="#"></a>
+														<span>R. Bocheński</span>								
+													</div>												
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													19
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													20
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													21
+												</div>	
+											</div>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													22
+												</div>													
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													23
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													24
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													25
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													26
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													27
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													28
+												</div>	
+											</div>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													29
+												</div>
+												
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													30
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													31
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box hidden">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													1
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box hidden">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													2
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box hidden">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													3
+												</div>	
+											</div>
+										</div>
+									</div>
+									<div class="day">
+										<div class="box hidden">
+											<a href="#" class="add"></a>	
+											<div class="content">
+												<div class="number">
+													4
+												</div>	
+											</div>
+										</div>
+									</div>
+								</li>								
 							</ul>							
 						</div>
 					</div>
@@ -317,9 +509,9 @@
 	
 
 
-
-
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/jquery.nice-select.min.js"></script>
+<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
