--- a/window_login.html
+++ b/window_login.html
@@ -27,16 +27,16 @@
 						</a>
 						<ul class="field">
 							<li>	
-								<span>Zaloguj się do systemu kufa!</span>
+								<span>Zaloguj się do systemu</span>
 							</li>
 							<li>
-								<label>Login lub adres e-mail</label>
+								<label>Adres e-mail:</label>
 								<fieldset>
 									<input type="text">
 								</fieldset>
 							</li>
 							<li class="line">	
-								<label>Hasło kufa!</label>
+								<label>Hasło:</label>
 								<fieldset>
 									<input type="password">
 								</fieldset>
