--- a/window_calendar.html
+++ b/window_calendar.html
@@ -17,13 +17,13 @@
 <div id="page" class="blue">
 	
 
-	<div id="layer">
+	<div id="layer" class="calendar_mini">
 		<div class="content">
 			<div class="row">
 				<div class="col">
 					<div id="calendar" class="window">
 						<a href="#" id="cw" class="close">
-							<i class="fa fa-times-circle-o"></i>
+							<i class="fa fa-times-circle"></i>
 						</a>
 						<div class="date">
 							<span class="year">2015</span>
@@ -77,8 +77,7 @@
 								<li><a href="#"><span>29</span></a></li>
 								<li><a href="#"><span>30</span></a></li>
 								<li><a href="#"><span>31</span></a></li>
-							</ul>
-							
+							</ul>							
 						</div>
 					</div>	
 				</div>
