--- a/window_delete_cabinet.html
+++ b/window_delete_cabinet.html
@@ -48,7 +48,7 @@
 								lub
 							</li>
 							<li>	
-								<button type="submit" id="cw" class="btn cw md">
+								<button type="submit" id="cw" class="btn cw md close">
 									<i class="fa fa-times-circle-o"></i> Zamknij okno
 								</button>
 							</li>
@@ -58,7 +58,6 @@
 			</div>
 		</div>
 	</div>
-	
 </div>
 
 
