--- a/cabinet_list.html
+++ b/cabinet_list.html
@@ -4,13 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Hevicado 2.0</title>
-
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300,100' rel='stylesheet' type='text/css'>
-
 	<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="elements.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-	
+	<link rel="stylesheet" href="css/jguery.Select.css" type="text/css" media="screen" />	
 </head>
 <body>
 
@@ -35,13 +34,14 @@
 		<nav>
 			<ul>
 				<li class="active"><a href="search.html"><i class="fa fa-search"></i> Szukaj</a></li>
-				<li><a href="#"><i class="fa fa-area-chart"></i>Pulpit</a></li>
+				<li><a href="dashboard.html"><i class="fa fa-area-chart"></i>Pulpit</a></li>
 				<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
-				<li><a href="#"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
+				<li><a href="card_patient.html"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
 				<li><a href="visit.html"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
 				<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
-				<li><a href="#"><i class="fa fa-inbox"></i>Wiadomości</a></li>
-				<li><a href="#"><i class="fa fa-cogs"></i>Moje konto</a></li>
+				<li><a href="message.html"><i class="fa fa-inbox"></i>Wiadomości</a></li>
+				<li><a href="my_account.html"><i class="fa fa-cogs"></i>Moje konto</a></li>
+				<li><a href="statistic.html"><i class="fa fa-bar-chart"></i>Statystyki</a></li>			
 				<li><a href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
 			</ul>
 		</nav>
@@ -77,21 +77,21 @@
 								</span>								
 							</div>							
 						</div>
-						<ul class="data">							
+						<ul class="list">							
 							<li class="deactive">
-								<div class="info">									
-									<a href="#"><i class="fa fa-eye-slash"></i> Niepubliczny Zakład Medycyny Stosowanej</a>
+								<div class="info list">								
+									<a href="#"><i class="fa fa-eye-slash"></i><span class="title"> Niepubliczny Zakład Medycyny Stosowanej</span></a>
 								</div>
 								<div class="action line">
 									<div class="switch">
 										<input type="checkbox" name="switch" class="switch-checkbox" id="id1">
 										<label class="switch-label" for="id1"></label>
 									</div>
-									<a href="#"><i class="fa fa-trash-o"></i></a>
+									<a href="#" class="delete"><i class="fa fa-trash-o"></i></a>
 								</div>
 							</li>
 							<li>
-								<div class="info">									
+								<div class="info list">									
 									<a href="cabinet_info.html">Niepubliczny Zakład Medycyny Stosowanej</a>
 								</div>
 								<div class="action line">
@@ -99,7 +99,7 @@
 										<input type="checkbox" name="switch" class="switch-checkbox" id="id2" checked>
 										<label class="switch-label" for="id2"></label>
 									</div>					
-									<a href="#"><i class="fa fa-trash-o"></i></a>
+									<a href="#" class="delete"><i class="fa fa-trash-o"></i></a>
 								</div>
 							</li>
 						</ul>		
@@ -108,12 +108,50 @@
 			</div>			
 		</section>
 	</section>
-</div>
 
+	<div id="layer" class="delete_cabinet" style="display:">
+		<div class="content">
+			<div class="row">
+				<div class="col">
+					<div id="form" class="window">
+						<a href="#" id="cw" class="close">
+							<i class="fa fa-times-circle-o"></i>
+						</a>
+						<ul class="field">
+							<li>	
+								<span>Czy napewno chcesz usunać gabinet</span>
+							</li>
+							<li class="horizontal center line">	
+								<label>
+									<div class="checkbox">
+										<input type="checkbox" id="id1a" name="check">
+										<label class="check" for="id1a"></label>
+									</div>		
+								</label>
+								<fieldset>Tak</fieldset>								
+							</li>						
+						</ul>
+						<ul class="action">
+							<li>	
+								<button type="submit" class="btn blue md">
+									<i class="fa fa-check"></i> Zatwierdź
+								</button>
+							</li>
+						</ul>						
+					</div>	
+				</div>
+			</div>
+		</div>
+	</div>
+	
+</div>
 
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.nice-select.min.js"></script>
+<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
+<script type="text/javascript" src="js/chart.min.js"></script> 
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+<script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
