--- a/calendar_30days.html
+++ b/calendar_30days.html
@@ -4,16 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Hevicado 2.0</title>
-
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300,100' rel='stylesheet' type='text/css'>
-
 	<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="elements.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="css/jquery.bxslider.css" type="text/css" media="screen" />	
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="css/jguery.Select.css" type="text/css" media="screen" />
-	
+	<link rel="stylesheet" href="css/jguery.Select.css" type="text/css" media="screen" />	
 </head>
 <body>
 
@@ -32,22 +28,24 @@
 					<img src="images/sample-men.jpg" alt="Mateusz Kowalski">
 				</div>
 				<span class="name">
-					Mateusz<br/>
-					Kowalski
+					<a href="my_account.html">
+					Mateusz<br/>Kowalski
+					</a>
 				</span>
 				<span>Lekarz</span>
 			</div>
 			<nav>
 				<ul>
 					<li class="active"><a href="search.html"><i class="fa fa-search"></i> Szukaj</a></li>
-					<li><a href="#"><i class="fa fa-area-chart"></i>Pulpit</a></li>
+					<li><a href="dashboard.html"><i class="fa fa-area-chart"></i>Pulpit</a></li>
 					<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
-					<li><a href="#"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
+					<li><a href="card_patient.html"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
 					<li><a href="visit.html"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
 					<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
-					<li><a href="#"><i class="fa fa-inbox"></i>Wiadomości</a></li>
-					<li><a href="#"><i class="fa fa-cogs"></i>Moje konto</a></li>
-					<li><a href="#"><i class="fa fa-power-off"></i>Wyloguj</a></li>
+					<li><a href="message.html"><i class="fa fa-inbox"></i>Wiadomości</a></li>
+					<li><a href="my_account.html"><i class="fa fa-cogs"></i>Moje konto</a></li>
+					<li><a href="statistic.html"><i class="fa fa-bar-chart"></i>Statystyki</a></li>	
+					<li><a href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
 				</ul>
 			</nav>			
 		</div>
@@ -81,7 +79,7 @@
 					<div class="col col-7">						
 						<div class="window">						
 							<div class="title-window">
-								<div class="choose">
+								<div class="choose">									
 									<fieldset>
 										<select>
 											<option value="1">Wybierz gabinet</option>
@@ -102,12 +100,23 @@
 									Zaplanowane wizyty na dziś <span>39</span>
 								</div>
 								<div class="legend">
-									<a href="#"><i class="fa fa-list-ul"></i> Legenda</a>									
-									<ul class="position">
-										<li><span style="background:green"></span>Badanie kontrolne (10 min)</li>
-										<li><span style="background:red"></span>Ekstrakcja zęba (20 min)</li>
-										<li><span style="background:orange"></span>Wybielanie zębów (10 min)</li>
-									</ul>									
+									<a href="#" class="open"><i class="fa fa-list-ul"></i> Legenda</a>
+									<div class="position">
+										<div class="info">
+											Filtruj
+										</div>
+										<ul>
+											<li><span class="title">Gabinety:</span></li>
+											<li><span style="background:pink"></span><a href="#">NFZ Róża</a></li>
+											<li><span style="background:yellow"></span><a href="#">Remedis</a></li>
+										</ul>	
+										<ul>
+											<li><span class="title">Badania:</span></li>
+											<li><span style="background:green"></span><a href="#">Badanie kontrolne (10 min)</a></li>
+											<li><span style="background:red"></span><a href="#">Ekstrakcja zęba (20 min)</a></li>
+											<li><span style="background:orange"></span><a href="#">Wybielanie zębów (10 min)</a></li>
+										</ul>	
+									</div>
 								</div>
 							</div>
 									
@@ -130,11 +139,11 @@
 													1
 												</div>	
 												<div class="events">
-													<div class="event" style="background:green;">
+													<div class="event" style="background:green; border-top:2px solid blue">
 														<a href="#"></a>
 														<span>K. Kowalski</span>								
 													</div>
-													<div class="event" style="background:red;">
+													<div class="event" style="background:red; border-top:2px solid pink">
 														<a href="#"></a>
 														<span>M. Kowalczyk</span>								
 													</div>
@@ -314,7 +323,7 @@
 													18
 												</div>	
 												<div class="events">
-													<div class="event" style="background:orange;">
+													<div class="event" style="background:orange; border-top:2px solid blue">
 														<a href="#"></a>
 														<span>R. Bocheński</span>								
 													</div>												
@@ -505,14 +514,85 @@
 			</div>			
 		</section>
 	</section>
-</div>
-	
 
+	<!-- WINDOW ACTION -->
+
+	<div id="layer" class="calendar_mini">
+		<div class="content">
+			<div class="row">
+				<div class="col">
+					<div id="calendar" class="window">
+						<a href="#" id="cw" class="close">
+							<i class="fa fa-times-circle"></i>
+						</a>
+						<div class="date">
+							<span class="year">2015</span>
+							<span class="month">Październik</span>
+							<span class="day">Poniedziałek</span>
+						</div>
+						<div class="month">
+							<a href="#"><i class="fa fa-angle-left"></i></a>
+							<span>
+								Październik 2015
+							</span>
+							<a href="#"><i class="fa fa-angle-right"></i></a>					
+						</div>
+						<div class="days">
+							<ul>
+								<li class="day">P</li>
+								<li class="day">W</li>
+								<li class="day">Ś</li>
+								<li class="day">C</li>
+								<li class="day">P</li>
+								<li class="day">S</li>
+								<li class="day">N</li>
+								<li><a href="#" class="active"><span>1</span></a></li>
+								<li><a href="#"><span>2</span></a></li>
+								<li><a href="#"><span>3</span></a></li>
+								<li><a href="#"><span>4</span></a></li>
+								<li><a href="#"><span>5</span></a></li>
+								<li><a href="#"><span>6</span></a></li>
+								<li><a href="#"><span>7</span></a></li>
+								<li><a href="#"><span>8</span></a></li>
+								<li><a href="#"><span>9</span></a></li>
+								<li><a href="#"><span>10</span></a></li>
+								<li><a href="#"><span>11</span></a></li>
+								<li><a href="#"><span>12</span></a></li>
+								<li><a href="#"><span>13</span></a></li>
+								<li><a href="#"><span>14</span></a></li>
+								<li><a href="#"><span>15</span></a></li>
+								<li><a href="#"><span>16</span></a></li>
+								<li><a href="#"><span>17</span></a></li>
+								<li><a href="#"><span>18</span></a></li>
+								<li><a href="#"><span>19</span></a></li>
+								<li><a href="#"><span>20</span></a></li>
+								<li><a href="#"><span>21</span></a></li>
+								<li><a href="#"><span>22</span></a></li>
+								<li><a href="#"><span>23</span></a></li>
+								<li><a href="#"><span>24</span></a></li>
+								<li><a href="#"><span>25</span></a></li>
+								<li><a href="#"><span>26</span></a></li>
+								<li><a href="#"><span>27</span></a></li>
+								<li><a href="#"><span>28</span></a></li>
+								<li><a href="#"><span>29</span></a></li>
+								<li><a href="#"><span>30</span></a></li>
+								<li><a href="#"><span>31</span></a></li>
+							</ul>							
+						</div>
+					</div>	
+				</div>
+			</div>
+		</div>
+	</div>
+	
+</div>
 
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.nice-select.min.js"></script>
 <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
+<script type="text/javascript" src="js/chart.min.js"></script> 
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+<script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
